--- a/WeeklyTournamentTracker/version1/index.html
+++ b/WeeklyTournamentTracker/version1/index.html
@@ -1481,7 +1481,8 @@
                 Example usage:<br>
                 1) Select current or latest weekly tournament. <i>Done automatically by default.</i><br>
                 2) Input Username of player. Left User ID blank.<br>
-                3) Press Start Fetch Data.<br> 
+                3) Select Highest Rank. <i>(Optional, you can do it later.)</i><br>
+                4) Press Start Fetch Data.<br> 
                 <i>You may use Update Using Cached Data after first full fetch, for checking multiple players.</i>
             </p>
         </div>
