--- a/WeeklyTournamentTracker/version1/index.html
+++ b/WeeklyTournamentTracker/version1/index.html
@@ -1,4 +1,18 @@
 <head>
+    <title>Gods Unchained Weekly Tournament Calculator v1</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147640424-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-147640424-1');
+    </script>
+
     <script type="text/javascript" src="assets/web3.min.js"></script>
     <script type="text/javascript" src="assets/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="assets/jquery.datetimepicker.full.min.js"></script>
