Auto fire on first launch.

--- a/GuCardsRaffleTokensMonitoring/index.html
+++ b/GuCardsRaffleTokensMonitoring/index.html
@@ -16,7 +16,7 @@
 <body>
         <div class="container">
             <h1><a href="https://gu.cards/raffle">https://gu.cards/raffle</a></h1>
-            <h3>Metamask or other web3 compatible wallet must be working. Fully client-side tool.</h3><p>This tool will crab data directly from <a href="https://etherscan.io/address/0x486C2816703B3D76BB77ab72711646f4E83d6c10">contract</a>, using your web3 provider.</p><p id="status">(Status Message)</p><div style="text-align: center;"><a id="singleRefresh" href="javascript:SingleRefresh()">Refresh</a><br><br><a id="startLoop" href="javascript:startLoop(5000)">Refresh Every 5 Seconds</a></div>
+            <h3>MetaMask or other web3 compatible wallet must be working. Fully client-side tool.</h3><p>This tool will crab data directly from <a href="https://etherscan.io/address/0x486C2816703B3D76BB77ab72711646f4E83d6c10">contract</a>, using your web3 provider.</p><p id="status">(Status Message)</p><div style="text-align: center;"><a id="singleRefresh" href="javascript:SingleRefresh()">Refresh</a><br><br><a id="startLoop" href="javascript:startLoop(5000)">Refresh Every 5 Seconds</a></div>
             <table class="sortable">
                 <thead>
                     <tr>
