--- a/GuCardsRaffleTokensMonitoring/index.html
+++ b/GuCardsRaffleTokensMonitoring/index.html
@@ -6,32 +6,52 @@
     <script type="text/javascript" src="assets/gudeckscontractabiv1.js"></script>
     <script type="text/javascript" src="assets/godsunchainedtokensabiv1.js"></script>
     <script type="text/javascript" src="assets/datatables.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="assets/datatables.min.css"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147657308-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-147657308-1');
+    </script>
+
+    <link rel="stylesheet" type="text/css" href="assets/datatables.min.css" />
     <style>
-    #status{
-        text-align: center;
-    }
+        #status {
+            text-align: center;
+        }
     </style>
 </head>
+
 <body>
-        <div class="container">
-            <h1><a href="https://gu.cards/raffle">https://gu.cards/raffle</a></h1>
-            <h3>MetaMask or other web3 compatible wallet must be working. Fully client-side tool.</h3><p>This tool will crab data directly from <a href="https://etherscan.io/address/0x486C2816703B3D76BB77ab72711646f4E83d6c10">contract</a>, using your web3 provider.</p><p id="status">(Status Message)</p><div style="text-align: center;"><a id="singleRefresh" href="javascript:SingleRefresh()">Refresh</a><br><br><a id="startLoop" href="javascript:startLoop(5000)">Refresh Every 5 Seconds</a></div>
-            <table class="sortable">
-                <thead>
-                    <tr>
-                        <td>Listing Id</td>
-                        <td>User</td>
-                        <td>Price in ETH</td>
-                        <td>Tickets to Sell</td>
-                        <td>Tickets left</td>
-                        <td>User Tickets Balance</td>
-                        <td>Allowance</td>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
-    
-        <script type="text/javascript" src="assets/script.js"></script>
-    </body>
+    <div class="container">
+        <h1><a href="https://gu.cards/raffle">https://gu.cards/raffle</a></h1>
+        <h3>MetaMask or other web3 compatible wallet must be working. Fully client-side tool.</h3>
+        <p>This tool will crab data directly from <a
+                href="https://etherscan.io/address/0x486C2816703B3D76BB77ab72711646f4E83d6c10">contract</a>, using your
+            web3 provider.</p>
+        <p id="status">(Status Message)</p>
+        <div style="text-align: center;"><a id="singleRefresh" href="javascript:SingleRefresh()">Refresh</a><br><br><a
+                id="startLoop" href="javascript:startLoop(5000)">Refresh Every 5 Seconds</a></div>
+        <table class="sortable">
+            <thead>
+                <tr>
+                    <td>Listing Id</td>
+                    <td>User</td>
+                    <td>Price in ETH</td>
+                    <td>Tickets to Sell</td>
+                    <td>Tickets left</td>
+                    <td>User Tickets Balance</td>
+                    <td>Allowance</td>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
+    <script type="text/javascript" src="assets/script.js"></script>
+</body>
