--- a/GuCardsRaffleTokensMonitoring/index.html
+++ b/GuCardsRaffleTokensMonitoring/index.html
@@ -43,9 +43,9 @@
                     <td>Listing Id</td>
                     <td>User</td>
                     <td>Price in ETH</td>
-                    <td>Tickets to Sell</td>
-                    <td>Tickets left</td>
-                    <td>User Tickets Balance</td>
+                    <td>Tokens to Sell</td>
+                    <td>Tokens left</td>
+                    <td>User Tokens Balance</td>
                     <td>Allowance</td>
                 </tr>
             </thead>
