--- a/WeeklyTournamentTracker/version1/index.html
+++ b/WeeklyTournamentTracker/version1/index.html
@@ -1216,7 +1216,7 @@
             "G. Auric Gold",
             "G+. Solar Gold",
             "D. Ethereal Diamond",
-            "M. Mythic"
+            "My. Mythic"
         ];
 
         function loadFromCookies() {
@@ -1353,7 +1353,7 @@
             updateTimes(new Date());
             tierTableEndRanks = new TierTableEndRanks(document.getElementById("tierTableEndRanks"));
             tierTableEndRanks.fillTable([
-                "B,B+,I,I+,M,M+", "S,S+", "G,G+", "D", "M"
+                "B,B+,I,I+,M,M+", "S,S+", "G,G+", "D", "My"
             ]);
             tierTableWins = new TierTableWins(document.getElementById("tierTableWins"));
             tierTableWins.fillTable([
@@ -1579,7 +1579,7 @@
                             <option value="G">G. Auric Gold</option>
                             <option value="G+">G+. Solar Gold</option>
                             <option value="D">D. Ethereal Diamond</option>
-                            <option value="M">M. Mythic</option>
+                            <option value="My">My. Mythic</option>
                         </select>
                     </th>
                 </tr>
