Ref. code description update.

--- a/WeeklyTournamentTracker/version1/index.html
+++ b/WeeklyTournamentTracker/version1/index.html
@@ -1816,7 +1816,7 @@
                 <tr>
                     <th class="tg"><a target="_blank"
                             href="https://godsunchained.com/?refcode=0xa61481ffe8c995fa7a68d1fe373b6c25f5ad5ae3">Buy
-                            Card PAX!</a></th>
+                            Card PAX!</a><br>It will override<br>your current ref. code!</th>
                 </tr>
             </tfoot>
         </table>
