--- a/WeeklyTournamentTracker/version1/index.html
+++ b/WeeklyTournamentTracker/version1/index.html
@@ -574,7 +574,7 @@
                 walletETH = document.getElementById("ETHWalletAddress").value;
             }
             let response = await fetch(`https://api.godsunchained.com/v0/user/${ETHWallet}`);
-            if (response.ok) {
+            if (response !== undefined && response !== null && response.ok) {
                 let json = await response.json();
             } else {
                 alert("Ошибка HTTP: " + response.status);
@@ -845,7 +845,7 @@
                                 statusMessage.updateMessage(
                                     `Error On Fetching Matches, trying again #${breakit++}`);
                             });;
-                            if (response.ok) {
+                            if (response !== undefined && response !== null && response.ok) {
                                 let json = await response.json();
                                 let pagesCalculate = Math.ceil(json["total"] / json["perPage"]);
                                 if (totalRecords != json["total"]) totalRecords = json["total"];
@@ -1274,7 +1274,7 @@
                                     statusMessage.updateMessage(
                                         `Error On Full Fetching Usernames, trying again #${breakit++}`);
                                 });;
-                            if (response.ok) {
+                            if (response !== undefined && response !== null && response.ok) {
                                 let json = await response.json();
                                 let pagesCalculate = Math.ceil(json["total"] / json["perPage"]);
                                 if (totalRecords != json["total"]) totalRecords = json["total"];
