--- a/WeeklyTournamentTracker/version1/index.html
+++ b/WeeklyTournamentTracker/version1/index.html
@@ -1317,10 +1317,10 @@
                     console.log(totalFetchedRecords, ":I:", totalRecords);
                 }
 
-                for (let userEntry of fetchedUserNames){
+                for (let userEntry of fetchedUserNames) {
                     userEntry.username = userEntry.username.trim();
                 }
-                
+
                 this.usernamesDatabase = fetchedUserNames;
             }
         }
@@ -1918,6 +1918,7 @@
         </table>
     </div>
     <div style="clear: both;" class="footer">
+         <a href="https://xonrsoftware.github.io/GodsUnchainedTools/CountdownToRaffle/index.html">Gods Unchained Raffle Tokens Draw Countdown</a><br><br>
         <p>If you will not donate, then i will work at factory, like my grandpa used to work, and i will die at 45.</p>
     </div>
 </body>
